--- a/show-password2.html
+++ b/show-password2.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-
+    <h5 class="text-center text-muted mt-5">Made By &hearts; <a href="www.atechseva.com">Atechseva</a></h5>
 </body>
 
 </html>
